Dynamically generate roadmap tab and fix light mode image showing in home tab when switching from another tab in dark mode

--- a/src/Style.css
+++ b/src/Style.css
@@ -74,11 +74,10 @@ i {
     align-items: center;
 }
 /* study-material page */
-.study{
+.study,.roadMaps{
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 .tagline{
     margin-top: 5vh;
@@ -114,7 +113,7 @@ i {
     width: 80%;
 }
 
-.courses{
+.courses,.roads{
     width: 90%;
     height: 20px;
     margin-top: 50px;
@@ -140,6 +139,7 @@ i {
     border-bottom: none;
 }
 a{
+    text-decoration: none;
     color: var(--font-color);
     border-bottom: none;
 }
@@ -209,4 +209,31 @@ a:active{
 }
 .sol{
     display: none;
+}
+.roadBox{
+    height: 200px;
+    width: 300px;
+    border: 2px solid var(--font-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--font-color);
+}
+.glink-r{
+    display: none;
+    border: 1px solid var(--font-color);
+    background-color: var(--font-color);
+    color: var(--bg-color);
+    width: 33%;
+    padding: 10px;
+    justify-content: center;
+    border-radius: 5px;
+}
+.ar{
+    text-decoration: none;
+    color: var(--bg-color);
+}
+.ar:visited{
+    color: var(--bg-color);
 }
